# featuretools

./: .codecov.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  Dockerfile.arm  LICENSE  LSA Comp.ipynb  MANIFEST.in  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  \  circle.yml  contributing.md  cum_test.py  dask_profiling.py  dep_MRs_waiting_approval.json  dev-requirements.txt  dockerfile  koalas-requirements.txt  notes.txzt  nvidia_featuretools_copyright.md  nvidia_featuretools_license.md  pyproject.toml  release.md  requirements.txt  setup-requirements.txt  setup.cfg  setup.py  spark-requirements.txt  test  test-requirements.txt  test.json  test.parq  (+4 more)
.circleci/: config.yml
.github/: auto_assign.yml
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/workflows/: auto_approve_dependency_MRs.yml  auto_approve_dependency_PRs.yaml  auto_approve_dependency_PRs.yml  broken_link_check.yaml  broken_link_check.yml  build_docs.yaml  create_feedstock_pr.yaml  dependency_check.yml  feedstock_pr_create.yaml  install_test.yaml  install_test.yml  integration_tests.yml  kickoff_evalml_unit_tests.yaml  latest_dependency_checker.yaml  latest_dependency_checker.yml  latest_unit_tests.yml  lint_check.yaml  lint_check.yml  looking_glass_airflow_performance_tests.yaml  looking_glass_performance_tests.yaml  minimum_dependency_checker.yaml  minimum_dependency_checker.yml  minimum_dependency_checker.yml   performance-check.yaml  performance-check.yml  pull_request_check.yaml  release.yaml  release.yml  release_notes.yml  release_notes_updated.yaml  release_notes_updated.yml  test_with_woodwork_main_branch.yml  test_without_test_dependencies.yaml  tests.yml  tests_with_latest_deps.yaml  tests_with_minimum_deps.yaml  tests_with_woodwork_main_branch.yaml  unit_tests_with_latest_deps.yaml  unit_tests_with_latest_deps.yml  unit_tests_with_minimum_deps.yaml  (+3 more)
.pytest_cache/v/cache/: lastfailed  nodeids
benchmarks/: Groupby Transform Benchmark.ipynb
conda.recipe/: Dockerfile  build_and_upload_conda_package.py  build_featuretools.sh  d.out  instructions.md  meta.yaml  run_test.sh
demo_notebooks/: deep_feature_synthesis.ipynb  feature_primitives.ipynb  representing_data_with_entitysets.ipynb  what_is_featuretools.ipynb
docs/: .notes.swp  Makefile  backport_release.md  contributing.md  issue_template.md  make.bat  notebook_cleaner.py  notebook_version_standardizer.py  pull_request_template.md
docs/source/: api_reference.rst  changelog.rst  community.rst  conf.py  ecosystem.rst  featuretools_enterprise.rst  frequently_asked_questions.ipynb  get_help.rst  help.rst  index.ipynb  index.rst  install.md  install.rst  install_v2.md  release_notes.rst  set-headers.py  setup.py  upload.py  variables.ipynb  variables.rst
docs/source/_static/: style.css
docs/source/automated_feature_engineering/: _extra_todo.rst  afe.rst  handling_time.rst  primitives.rst
docs/source/feature_engineering_language/: feature-types.rst  (+1 more)
featuretools/: __init__.py  __main__.py  config.py  config_init.py  config_yaml.py  exceptions.py  feats.txt  new_schema.py  tofix.txt  types.py  version.py
featuretools/computational_backends/: __init__.py  api.py  base_backend.py  calculate_feature_matrix.py  feature_set.py  feature_set_calculator.py  feature_tree.py  features_calculator.py  pandas_backend.py  utils.py
featuretools/core/: api.py  base.py
featuretools/dask-tests-tmp/: Home Credit FM.ipynb  Home Credit Feature Matrix with Dask.ipynb  Instacart Feature Matrix with Dask.ipynb  dockerfile  home_credit_gen_data.py  split_data_dask.py  test_add_lti.py  test_agg.py  test_dask_file_io.py  test_full_instacart.py  test_home_credit.py  test_instacart.py  utils.py
featuretools/demo/: __init__.py  api.py  flight.py  mock_customer.py  retail.py  weather.py
featuretools/entityset/: __init__.py  api.py  base_entity.py  base_entityset.py  deserialize.py  entity.py  entityset.py  metadata_entity.py  metadata_entityset.py  print.py  relationship.py  serialization.dev.py  serialization.py  serialize.py  timedelta.py  ww_entityset.py
featuretools/feature_base/: __init__.py  api.py  cache.py  feature_base.py  feature_description_combined.py  feature_description_onprimitive.py  feature_description_runon.py  feature_description_topdown.py  feature_descriptions.py  feature_visualizer.py  features_deserializer.py  features_serializer.py  utils.py
featuretools/feature_discovery/: FeatureCollection.py  LiteFeature.py  convertors.py  feature_discovery.py  type_defs.py  utils.py
featuretools/gui/: start.py
featuretools/import_adapters/: api.py  sql.py
featuretools/io/: api.py  sql.py
featuretools/primitive_utils/: api.py  install.py  utils.py
featuretools/primitives/: __init__.py  aggregation_primitive_base.py  aggregation_primitives.py  api.py  binary_transform.py  cum_transform_feature.py  date_to_holiday.py  direct_feature.py  install.py  options_utils.py  primitive_base.py  rolling_primitive_utils.py  transform_primitive.py  utils.py
featuretools/selection/: __init__.py  api.py  selection.py  variance_selection.py
featuretools/synthesis/: __init__.py  api.py  deep_feature_synthesis.py  dfs.py  dfs_filters.py  encode_features.py  get_valid_primitives.py  tdfs.py  utils.py
featuretools/tests/: conftest.py  latest_dependencies.txt  test_version.py
featuretools/utils/: __init__.py  api.py  cli_utils.py  column_utils.py  common_tld_utils.py  cuda_utils.py  cudf_utils.py  description_utils.py  entity_utils.py  entry_point.py  gen_utils.py  import_utils.py  koalas_utils.py  pickle_utils.py  plot_utils.py  recommend_primitives.py  s3_utils.py  schema_utils.py  spark_utils.py  time_utils.py  trie.py  utils_info.py  wrangle.py
featuretools/variable_types/: api.py  utils.py  variable.py
featuretools/wrappers/: __init__.py  api.py  sklearn.py
release/: upload.sh
release/docker/: upload.sh
test_serialization_data_entityset_schema_4.0.0/: data_description.json
(+800 files in other folders)
