[project]
name = "featuretools"
readme = "README.md"
description = "a framework for automated feature engineering"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
authors = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
maintainers = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
keywords = ["feature engineering", "data science", "machine learning"]
license = {text = "BSD 3-clause"}
requires-python = ">=3.9,<4"
dependencies = [
    "cloudpickle >= 1.5.0",
    "holidays >= 0.17",
    "numpy >= 1.25.0",
    "packaging >= 20.0",
    "pandas >= 2.0.0",
    "psutil >= 5.7.0",
    "scipy >= 1.10.0",
    "tqdm >= 4.66.3",
    "woodwork >= 0.28.0",
]

[project.urls]
"Documentation" = "https://featuretools.alteryx.com"
"Source Code"= "https://github.com/alteryx/featuretools/"
"Changes" = "https://featuretools.alteryx.com/en/latest/release_notes.html"
"Issue Tracker" = "https://github.com/alteryx/featuretools/issues"
"Twitter" = "https://twitter.com/alteryxoss"
"Chat" = "https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA"

[project.optional-dependencies]
test = [
    "boto3 >= 1.34.32",
    "composeml >= 0.8.0",
    "graphviz >= 0.8.4",
    "moto[all] >= 5.0.0",
    "pip >= 23.3.0",
    "pyarrow >= 14.0.1",
    "pympler >= 0.8",
    "pytest >= 7.1.2",
    "pytest-cov >= 3.0.0",
    "pytest-xdist >= 2.5.0",
    "smart-open >= 5.0.0",
    "urllib3 >= 1.26.18",
    "pytest-timeout >= 2.1.0",
]
dask = [
    "dask[dataframe] >= 2023.2.0",
    "distributed >= 2023.2.0",
]
tsfresh = [
    "featuretools-tsfresh-primitives >= 1.0.0",
]
autonormalize = [
    "autonormalize >= 2.0.1",
]
sql = [
    "featuretools_sql >= 0.0.1",
    "psycopg2-binary >= 2.9.3",
]
sklearn = [
    "featuretools-sklearn-transformer >= 1.0.0",
]
premium = [
    "premium-primitives >= 0.0.3",
]
nlp = [
    "nlp-primitives >= 2.12.0",
]
docs = [
    "ipython == 8.4.0",
    "jupyter == 1.0.0",
    "jupyter-client >= 8.0.2",
    "matplotlib == 3.7.2",
    "Sphinx == 5.1.1",
    "nbsphinx == 0.8.9",
    "nbconvert == 6.5.0",
    "pydata-sphinx-theme == 0.9.0",
    "sphinx-inline-tabs == 2022.1.2b11",
    "sphinx-copybutton == 0.5.0",
    "myst-parser == 0.18.0",
    "autonormalize >= 2.0.1",
    "click >= 7.0.0",
    "featuretools[dask,test]",
]
dev = [
    "ruff >= 0.1.6",
    "black[jupyter] >= 23.1.0",
    "pre-commit >= 2.20.0",
    "featuretools[docs,dask,test]",
]
complete = [
    "featuretools[premium,nlp,dask]",
]

[tool.setuptools]
include-package-data = true
license-files = [
    "LICENSE",
    "featuretools/primitives/data/free_email_provider_domains_license"
]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "README.md",
]
"featuretools" = [
    "primitives/data/*.csv",
    "primitives/data/*.txt",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
    "docs/*"
]

[tool.setuptools.dynamic]
version = {attr = "featuretools.version.__version__"}

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=featuretools/tests/entry_point_tests/add-ons"
testpaths = [
    "featuretools/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.ignore = ["E501"]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
src = ["featuretools"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "I001", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["featuretools"]

[tool.coverage.run]
source = ["featuretools"]
omit = [
    "*/add-ons/**/*"
]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]
[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"
