[metadata]
name = featuretools
version = attr: featuretools.version.__version__
url = https://github.com/alteryx/featuretools
download_url = https://pypi.org/project/featuretools/
project_urls = 
    Documentation = https://featuretools.alteryx.com
    Tracker = https://github.com/alteryx/featuretools/issues
    Source Code = https://github.com/alteryx/featuretools/
    Changes = https://featuretools.alteryx.com/en/latest/release_notes.html
    Issue Tracker = https://github.com/alteryx/featuretools/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-6inxevps-RSbpr9lsACE1kObXz4rIuA
    
author = Alteryx, Inc.
author_email = open_source_support@alteryx.com
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
license = BSD 3-clause
description = a framework for automated feature engineering
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature engineering, data, science, machine learning
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    scipy >= 1.3.3
    numpy >= 1.21.0
    pandas >= 1.3.0
    tqdm >= 4.32.0
    cloudpickle >= 1.5.0
    distributed >= 2021.10.0
    dask[dataframe] >= 2021.10.0
    psutil >= 5.6.6
    click >= 7.0.0
    woodwork >= 0.14.0
    holidays >= 0.13
python_requires = >=3.7, <4

[options.extras_require]
dev = 
    scikit-learn >=0.20.0, !=0.22
    codecov == 2.1.12
    Jinja2 == 3.0.3
    flake8 == 3.9.2
    autopep8 == 1.5.7
    ipython == 7.31.1
    isort == 5.9.3
    jupyter == 1.0.0
    matplotlib == 3.3.3
    nbconvert == 6.2.0
    nbsphinx == 0.8.7
    pydata-sphinx-theme== 0.7.1
    Sphinx == 4.2.0
    sphinx-inline-tabs == 2021.3.28b7; python_version == '3.7'
    sphinx-inline-tabs == 2022.1.2b11; python_version >= '3.8'
    sphinx-copybutton == 0.4.0
    myst-parser == 0.16.1
    nlp_primitives[complete] >= 2.3.0
    autonormalize >= 1.0.2
    %(spark)s
    %(test)s
test = 
    pytest >= 5.2.0
    pympler >= 0.8
    pytest-xdist >= 1.26.1
    pytest-cov >= 2.6.1
    graphviz >= 0.8.4
    moto[all] >= 3.0.7
    smart-open >= 5.0.0
    boto3 >= 1.17.46
    composeml >= 0.8.0
    urllib3 >= 1.26.5
    pyarrow >= 3.0.0
spark = 
    pyspark >=3.2.0
    pandas >=1.3.0, <1.4.0
tsfresh = 
    featuretools-tsfresh-primitives >= 1.0.0
update_checker =
    alteryx-open-src-update-checker >= 2.0.0
nlp_primitives = 
    nlp-primitives[complete] >= 2.0.0
autonormalize = 
    autonormalize >= 1.0.2
complete =
    %(tsfresh)s
    %(update_checker)s
    %(nlp_primitives)s
    %(spark)s
    %(autonormalize)s

[options.package_data]
* =
    *.txt
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[options.entry_points]
console_scripts =
    featuretools = featuretools.__main__:cli

[tool:pytest]
addopts = --doctest-modules --ignore=featuretools/tests/entry_point_tests/add-ons
python_files = featuretools/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
exclude = docs/*
ignore = E501,W504 # line too long error, line break after binary operator

[isort]
forced_separate=featuretools
skip=__init__.py
# vertical hanging indent
multi_line_output=3
