[metadata]
name = featuretools
version = attr: featuretools.version.__version__
url = https://github.com/alteryx/featuretools
download_url = https://pypi.org/project/featuretools/
project_urls =
    Documentation = https://featuretools.alteryx.com
    Source Code = https://github.com/alteryx/featuretools/
    Changes = https://featuretools.alteryx.com/en/latest/release_notes.html
    Issue Tracker = https://github.com/alteryx/featuretools/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA
author = Alteryx, Inc.
author_email = open_source_support@alteryx.com
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
license = BSD 3-clause
license_files =
    LICENSE
    featuretools/primitives/data/free_email_provider_domains_license
description = a framework for automated feature engineering
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature engineering, data, science, machine learning
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    click >= 7.0.0
    cloudpickle >= 1.5.0
    dask[dataframe] >= 2022.04.0, <2022.8.0
    distributed >= 2022.04.0, <2022.8.0
    holidays >= 0.13
    numpy >= 1.21.0
    packaging >= 20.0
    pandas >= 1.4.3
    psutil >= 5.6.6
    scipy >= 1.4.0
    tqdm >= 4.32.0
    woodwork >= 0.17.2
python_requires = >=3.8, <4

[options.extras_require]
docs =
    scikit-learn >=0.20.0, !=0.22
    ipython == 8.4.0
    jupyter == 1.0.0
    matplotlib == 3.5.2
    Sphinx == 5.1.1
    nbsphinx == 0.8.9
    nbconvert == 6.5.0
    pydata-sphinx-theme == 0.9.0
    sphinx-inline-tabs == 2022.1.2b11
    sphinx-copybutton == 0.5.0
    myst-parser == 0.18.0
    nlp_primitives >= 2.3.0
    autonormalize >= 2.0.1
    %(spark)s
    %(test)s
dev =
    flake8 == 5.0.4
    isort == 5.10.1
    black[jupyter] == 22.6.0
    pre-commit >= 2.20.0
    %(docs)s
    %(spark)s
    %(test)s
test =
    boto3 >= 1.17.46
    composeml >= 0.8.0
    graphviz >= 0.8.4
    moto[all] >= 3.0.7
    pip >= 21.3.1
    pyarrow >= 3.0.0
    pympler >= 0.8
    pytest >= 7.1.2
    pytest-cov >= 3.0.0
    pytest-xdist >= 2.5.0
    smart-open >= 5.0.0
    urllib3 >= 1.26.5
spark =
    woodwork[spark] >= 0.16.2
tsfresh =
    featuretools-tsfresh-primitives >= 1.0.0
update_checker =
    alteryx-open-src-update-checker >= 2.0.0
nlp_primitives =
    nlp-primitives[complete] >= 2.0.0
autonormalize =
    autonormalize >= 2.0.1
complete =
    %(tsfresh)s
    %(update_checker)s
    %(nlp_primitives)s
    %(spark)s
    %(autonormalize)s

[options.package_data]
* =
    *.txt
    LICENSE
    README.md
featuretools =
    primitives/data/*.csv
    primitives/data/*.txt

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[options.entry_points]
console_scripts =
    featuretools = featuretools.__main__:cli

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503 # line too long error, line break after and before binary operator
